[gd_scene load_steps=10 format=3 uid="uid://ul5vt7t6vjq5"]

[ext_resource type="Script" path="res://scripts/stand_scale.gd" id="1_2mq4k"]
[ext_resource type="Texture2D" uid="uid://clqpqphwwst24" path="res://textures/standscale.png" id="1_4y25a"]
[ext_resource type="FontFile" uid="uid://bjuv3x1m38iht" path="res://textures/04B_03__.TTF" id="3_lcrmj"]
[ext_resource type="AudioStream" uid="uid://vbxummvqusin" path="res://sounds/blip.wav" id="4_nuuh5"]
[ext_resource type="AudioStream" uid="uid://8p5s6gvyc8ba" path="res://sounds/complete.wav" id="5_hohyw"]
[ext_resource type="AudioStream" uid="uid://m4ud8mwl8lyq" path="res://sounds/too_much.wav" id="6_v3f8q"]
[ext_resource type="Texture2D" uid="uid://cnboeivb7s50p" path="res://textures/scale_arrow.png" id="7_bqugb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7u85j"]
size = Vector2(9, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d41ci"]
size = Vector2(9, 2)

[node name="Stand Scale" type="Node2D"]
script = ExtResource("1_2mq4k")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_4y25a")

[node name="Label" type="Label" parent="."]
offset_left = -16.0
offset_top = 6.0
offset_right = -7.0
offset_bottom = 16.0
scale = Vector2(1, 1.29)
theme_override_colors/font_color = Color(1, 0, 0.301961, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_lcrmj")
theme_override_font_sizes/font_size = 8
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-0.5, 13)
shape = SubResource("RectangleShape2D_7u85j")
one_way_collision = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.5, 10)
shape = SubResource("RectangleShape2D_d41ci")

[node name="Pip Tick" type="Timer" parent="."]
wait_time = 0.05

[node name="blip" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_nuuh5")
pitch_scale = 0.6

[node name="complete" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_hohyw")
volume_db = -4.0
pitch_scale = 0.6

[node name="error" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_v3f8q")

[node name="Arrow" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(-12, 8)
texture = ExtResource("7_bqugb")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Pip Tick" to="." method="_on_pip_tick_timeout"]
